--- a/.github/workflows/build_cloud.yaml
+++ b/.github/workflows/build_cloud.yaml
@@ -18,9 +18,9 @@ jobs:
       with:
         node-version: '16'
 
-    - run: git clone https://github.com/abap2UI5/builder && cd builder && npm i
-    - run: rm -rf setup/* && cp -r ../setup/cloud/* setup
-    - run: npm run clone && npm run rename && npm run abaplint
+    - run: git clone https://github.com/abap2UI5/builder && cd builder && npm i && rm -rf setup/*
+    - run: cd .. && cp -r setup/cloud/* builder/setup
+    - run: cd builder && npm run clone && npm run rename && npm run abaplint
     - run: cp -r dist/* .. && rm -rf ../builder
 
     - name: Commit Changes
